--- a/style.css
+++ b/style.css
@@ -1,8 +1,31 @@
 html,
 body,
 * {
+  /* This stuff should be here by default */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-size: 62.5%; /* Normally font size is 16px but we want 10px so we do 62.5% */
+
+  background-color: black;
+}
+
+.parent {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.test-1 {
+  font-size: 4rem;
+  color: white;
+  width: 28%;
+  border-color: white;
+  border-style: solid;
+  border-width: 0.5rem;
+  text-align: center;
+  margin-top: 10rem;
+  padding-bottom: 4rem;
+  padding-top: 4rem;
 }
