--- a/style.css
+++ b/style.css
@@ -10,11 +10,17 @@ body,
   background-color: black;
 }
 
+.header-1 {
+  font-size: 10rem;
+  color: white;
+  text-align: center;
+}
+
 .parent {
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
+  flex-flow: row wrap;
 }
 
 .test-1 {
@@ -26,6 +32,16 @@ body,
   border-width: 0.5rem;
   text-align: center;
   margin-top: 10rem;
-  padding-bottom: 4rem;
-  padding-top: 4rem;
+  padding-bottom: 50rem;
+  padding-top: 2rem;
+}
+
+.header-2 {
+  font-size: 4rem;
+  color: red;
+}
+
+.img-1 {
+  height: 10em;
+  width: auto;
 }
