--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@ body,
 
 .header-1 {
   margin-top: 10rem;
-  font-size: 10rem;
-  color: white;
+  font-size: 20rem;
+  color: cyan;
   text-align: center;
+  font-family: "Gemunu Libre", sans-serif;
 }
 
 .parent {
@@ -33,26 +34,31 @@ body,
   border-width: 0.5rem;
   text-align: center;
   margin-top: 10rem;
-  padding-bottom: 10rem;
+  padding-bottom: 6rem;
   padding-top: 2rem;
+  border-radius: 3rem;
+  box-shadow: 0rem 0rem 4rem 1rem white;
 }
 
 /* make header-2 block element in html */
 
 .header-2 {
-  font-size: 4rem;
-  color: lightblue;
+  font-size: 3rem;
+  color: turquoise;
   margin-bottom: 4rem;
+  font-family: "Gemunu Libre", sans-serif;
 }
 
 .img-1 {
   height: auto;
   width: 85%;
   position: relative;
+  border-radius: 2rem;
 }
 
 .text-1 {
   font-size: 2rem;
   position: relative;
   top: 2rem;
+  font-family: "Gemunu Libre", sans-serif;
 }
