--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body,
 .parent {
   display: flex;
   justify-content: space-evenly;
-  /* align-items: flex-start; */
+  align-items: baseline;
   flex-flow: row wrap;
 }
 
