--- a/style.css
+++ b/style.css
@@ -38,10 +38,10 @@ body,
   padding-bottom: 6rem;
   padding-top: 2rem;
   border-radius: 3rem;
-  box-shadow: 0rem 0rem 4rem 1rem white;
+  box-shadow: 0rem 0rem 3.5rem 1rem white;
 }
 
-/* make header-2 block element in html */
+/* make header-2 block element in html (Actually nvm)*/
 
 .header-2 {
   font-size: 3rem;
