--- a/style.css
+++ b/style.css
@@ -69,14 +69,19 @@ body,
   font-size: 2rem;
   text-decoration: none;
   transition: all 0.3s;
-  border-style: ridge;
   border-color: lightgreen;
-  background-color: lightgreen;
+  background-color: rgb(68, 230, 68);
+  box-shadow: inset 0rem 0rem 1rem 1rem palegreen;
   color: black;
   padding: 0.5rem 0.5rem 0.5rem 0.5rem;
   border-radius: 2rem;
 }
 
+/* .button-1:active {
+  box-shadow: inset 1rem 1rem 0.75rem orchid;
+} */
+
 .button-1:hover {
-  transform: scale(1.5);
+  transform: scale(10);
+  background-color: white;
 }
