--- a/style.css
+++ b/style.css
@@ -19,9 +19,12 @@ body,
   font-family: "Gemunu Libre", sans-serif;
   transition: all 0.3s;
   border-style: solid;
+  border-width: 0.3rem;
   width: 50%;
   margin-right: auto;
   margin-left: auto;
+  border-radius: 2rem;
+  background-color: darkgrey;
 }
 
 .header-1:hover {
@@ -116,6 +119,6 @@ body,
 }
 
 .button-1:hover {
-  transform: scale(1.5);
+  transform: scale(1.3);
   background-color: white;
 }
