--- a/style.css
+++ b/style.css
@@ -75,9 +75,6 @@ body {
   background-color: transparent;
 }
 
-.header-2:hover {
-}
-
 .img-1 {
   height: auto;
   width: 85%;
@@ -119,7 +116,7 @@ body {
   border-radius: 2rem;
   display: block;
   justify-self: center;
-  width: 25%;
+  width: 33%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -142,8 +139,27 @@ body {
   }
 }
 
-@media (max-height: 391px) {
-  body {
-    font-size: 10%;
+/* Media Queries */
+
+@media (max-width: 810px) {
+  html,
+  body,
+  * {
+    /* font-size: 25%; */
+  }
+  .flex-1 {
+    width: 80%;
+  }
+  .header-1 {
+    font-size: 13rem;
+  }
+}
+
+@media (max-width: 390px) {
+  .flex-1 {
+    width: 80%;
+  }
+  .header-1 {
+    font-size: 5rem;
   }
 }
